--- a/payment-service/src/main/resources/application.properties
+++ b/payment-service/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=payment-service
+server.port=8082
+
+# Logging
+logging.level.com.zuhlke.orderservice=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger - %msg%n
