Restructure into single Spring Boot application with order and payment service

--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,7 @@
 
     <modules>
         <module>common</module>
-        <module>order-service</module>
-        <module>payment-service</module>
-        <module>notification-service</module>
+        <module>order-processing-service</module>
     </modules>
 
     <properties>
